[package]
name = "jpn_holidays_wasm"
version = "0.1.0"
edition = "2021"
description = "Japanese holidays library for WebAssembly"
repository = ""
license = "MIT"
readme = "README.md"
homepage = ""
documentation = ""
keywords = ["japanese", "holidays", "wasm"]
categories = ["date-and-time"]
authors = ["Yoshitaka motomura <stay.daybreak@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
chrono = { version = "0.4.28", features = ["serde"] }
serde_json = "1.0.105"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2.16"
csv = "1.2.2"
anyhow = "1.0.75"
serde_yaml = "0.9.25"
pretty_assertions = "1.4.0"
[lib]
crate-type=["cdylib"]
